added feature of not allowing user to print the page and given overflow scroll to header part

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,11 @@
     -ms-user-select: none;
      user-select: none;
 }
+
+@media print {
+    html,
+    body {
+        /* Hide the whole page */
+        display: none;
+    }
+}
