--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -51,7 +51,9 @@
   font-size: 14px;
   margin-right: 10px;  //box shadow control
   //margin-top: 30px;
-  margin-top:50px
+  margin-top: 45px;
+  overflow-y: scroll;
+  height: 500px;
 }
 
 .songTitle{
@@ -68,8 +70,8 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   //height: 70px;
-  margin-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 20px;
+  //margin-top: 20px;
   height: 50px !important;
 }
 
