added language feature -> user can select their own language

--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -138,3 +138,10 @@
   position: absolute !important;
   right: 0px !important;
 }
+
+.selectLanguage{
+  position: absolute;
+  left: 13px;
+  top: 82px;
+  font-size: 12px;
+}
