--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -35,15 +35,16 @@
 .viewLyricButton{
   cursor: pointer;
   //margin-top: 25px;    //keeping text in card vertically align
-  height: 20px;
-  width: 40px;
-  font-size: 9px;
+  height: 27px;
+  width: 60px;
+  font-size: 15px;
   position: absolute;
   left: 270px;
-  top: 15px;
+  top: 11px;
   background: skyblue;
   color: white;
   border: none;
+  font-weight: 500;
 }
 
 .songTitles{      //-----> overall div for songs and view button
