added time stamp in daily verse in app

--- a/src/components/DailyVerse/DailyVerses.scss
+++ b/src/components/DailyVerse/DailyVerses.scss
@@ -1,3 +1,19 @@
 .dailyVerseModal{
   //height: 2000px;
 }
+
+.close_icon_daily_verse{
+  position: absolute;
+  top:10px;
+  right: 10px;
+}
+
+.dateTime_daily_verse{
+  position: absolute;
+  top: 95px;
+  right: 10px;
+}
+
+.time_daily_verse{
+  margin-left: 15px;
+}
