--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -52,7 +52,7 @@
   font-size: 14px;
   margin-right: 10px;  //box shadow control
   //margin-top: 30px;
-  margin-top: 45px;
+  margin-top: 5px;
   overflow-y: scroll;
   height: 550px;
 }
@@ -93,7 +93,7 @@
   cursor: pointer;
   right: 10px;
   color: red;
-  top: 80px;
+  top: 85px;
 }
 
 .contactUs{
@@ -153,4 +153,13 @@
   margin-left: -5px;
   cursor: pointer;
   vertical-align: middle;  //keeping picture vertically align center
+}
+
+.all_songs_option{
+  font-size: 10px !important;
+ position: absolute;
+  left: 83px;
+  top: -11px;
+  background-color: skyblue !important;
+  color: white !important;
 }
