--- a/src/components/viewLyricModal/ViewLyric.scss
+++ b/src/components/viewLyricModal/ViewLyric.scss
@@ -1,7 +1,8 @@
 .close_view_lyric_button{
   color: red;
   position: absolute;
-  right: 10px;
+  right: 5px;
+  top: 0px;
   cursor: pointer;
 }
 
