added youtube and facebook menu options

--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -178,3 +178,11 @@
   margin-top: 15px;
   margin-left: 10px;
 }
+
+.youtubeIconMenuBar{
+  margin-left: 10px;
+}
+
+.facebookIconMenuBar{
+  margin-left: 7px;
+}
